Fixed alignment for basket icon

--- a/stylesheets/plugins/ecom-product.less
+++ b/stylesheets/plugins/ecom-product.less
@@ -4,6 +4,10 @@
 // -----------------------------
 
 
+[data-name="ecomproduct"] {
+    z-index: 1;
+}
+
 .ecomproduct {
 
     &__product-article {
